<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_700"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.example.smart.medreminder.activity.RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_medicine_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:hint=" "
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_border"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:hint="@string/drugName"
                android:inputType="textPersonName"
                android:padding="@dimen/body_paddingLogin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:hint=" "
            android:layout_marginTop="7dp">

            <EditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_border"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:padding="@dimen/body_paddingLogin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:layout_marginTop="7dp"
            android:textColorHint="@android:color/white"
            android:theme="@style/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/password_border"
                android:drawablePadding="@dimen/phone_drawPadding"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="@dimen/body_paddingLogin"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:layout_marginTop="7dp"
            android:textColorHint="@android:color/white"
            android:theme="@style/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/password_border"
                android:drawablePadding="@dimen/phone_drawPadding"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/body_paddingLogin"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="@dimen/button_layoutWidth_login"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/btnlogin_bg"
            android:text="@string/sign_up" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="Already a member? Login"
            android:textSize="16dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        </com.google.android.gms.common.SignInButton>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
